# calendex

./: README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.cjs  vite.config.ts
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/lib/calendar/: actions.rs  utils.rs
src/components/: Navbar.svelte
src/lib/: EventForm.svelte  Scheduler.svelte
src/routes/: +layout.svelte
src/stores/: event_fields.ts
