[package]
name = "calendex"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0", features = ["api-all"] }

# CUSTOM:
ical = "0.7.*"
ics = "0.5.7"
icalendar = {version = "0.13.1", features = ['serde', 'serde_json'] }
chrono = {version = "0.4.22", features = ['serde'] }
fake = { version = "2.5", features= ['chrono', 'uuid'] }
rand = "0.8"
uuid = "1.1.2"



[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
